# hxy-recipe

./: .gitignore  README.md  java_serialize  pom.xml  users.avro
cpp/: clean_all.sh
cpp/build_recipes/: README.md
cpp/build_recipes/01_hello_cmake/: CMakeLists.txt  compile_by_g++_and_run.sh  hello_cmake.cpp
cpp/build_recipes/02_static_library/: CMakeLists.txt  compile_by_g++_with_static_library_and_run.sh
cpp/build_recipes/03_dynamic_library/: CMakeLists.txt  lib.h  main.cpp
cpp/build_recipes/04_if_else/: CMakeLists.txt  compile_by_cmake_compile_lib_off.sh  compile_by_g++_compile_lib_off.sh
cpp/build_recipes/05_cmake_options/: CMakeLists.txt
cpp/build_recipes/06_cmake_detect_env/: CMakeLists.txt
cpp/build_recipes/cmake/02_static_library/: lib.cpp
cpp/build_recipes/cmake/03_dynamic_library/: compile_by_g++_with_dynamic_library_and_run.sh
cpp/build_recipes/cmake/04_if_else/: compile_by_cmake_compile_lib_on.sh  compile_by_g++_compile_lib_on.sh
cpp/build_recipes/cmake/05_cmake_options/: compile_by_g++_and_run.sh  main.cpp  run.sh
cpp/build_recipes/cmake/05_cmake_options_and_config/: another.config.h  compile_by_g++_and_run.sh  main.cpp
cpp/build_recipes/cmake/cpp_project_basic_structure/: CMakeLists.txt  build_all.sh  clean.sh
cpp/build_recipes/cmake/cpp_project_basic_structure/application/: CMakeLists.txt
cpp/build_recipes/cmake/cpp_project_basic_structure/application/src/: main.cpp
cpp/build_recipes/cmake/cpp_project_basic_structure/common/: CMakeLists.txt
cpp/build_recipes/cmake/cpp_project_basic_structure/common/include/: common.h
cpp/build_recipes/cmake/cpp_project_basic_structure/common/src/: common.cpp  math.h
cpp/build_recipes/cmake/cpp_project_basic_structure/utils/: CMakeLists.txt
cpp/build_recipes/cmake/cpp_project_basic_structure/utils/include/: utils.h
cpp/build_recipes/cmake/cpp_project_basic_structure/utils/src/: add.cpp  utils.cpp
cpp/build_recipes/cmake/implements_data_structure_and_algorithm_by_cmake/heap_sort/: CMakeLists.txt
cpp/build_recipes/cmake/implements_data_structure_and_algorithm_by_cmake/rbtree/: CMakeLists.txt
cpp/build_recipes/cmake/install_lib/lib/: CMakeLists.txt  build_and_install.sh  cmake_install_lib.cc  cmake_install_lib.h  cmake_install_libConfig.cmake.in  main.cc
cpp/build_recipes/make/: Makefile
cpp/build_recipes/make/compile_c_by_makefile/: Makefile  main.c
cpp/build_recipes/make/hello_makefile/: Makefile
cpp/cpp_dev_utils/: hello.cpp
cpp/cpp_dev_utils/addr2line/: main.c  try_addr2line.sh
cpp/cpp_dev_utils/catchsegv/: catchsegv.output  main.c  try_catchsegv.sh
cpp/cpp_dev_utils/objdump/: libsum.so.objdump.txt  main.cpp  main.objdump.txt  sum.cpp  try_objdump.sh
cpp/cpp_lifecycle/: main.cpp  sum.h
cpp/cpp_recipe/aop/: about_aop.cpp
cpp/cpp_recipe/assert/: about_assert.cpp
cpp/cpp_recipe/basic/: about_reference.cpp
cpp/cpp_recipe/boost/boost_stacktrace/: about_boost_stacktrace.cpp
cpp/cpp_recipe/cast/: about_cast.cpp
cpp/cpp_recipe/circular_reference/: a.h  b.h  cd.h  main.cpp
cpp/cpp_recipe/const_volatile_mutable/: about_cvm.cpp  about_volatile.cpp
cpp/cpp_recipe/enum/: about_enum.cpp
cpp/cpp_recipe/env/: about_read_env.cpp
cpp/cpp_recipe/fp/: about_function_type.cpp  about_functional_programming.cpp  about_mutable_lambda.cpp  about_std_function.cpp
cpp/cpp_recipe/in_complete_type/: a_impl.cpp  a_interface.h  main.cpp  run.sh
cpp/cpp_recipe/inner_class/: inner_class.cpp
cpp/cpp_recipe/macro/: macro_skill.cpp
cpp/cpp_recipe/move_semantics/: move.cpp
cpp/cpp_recipe/multi_thread/: about_thread.cpp
cpp/cpp_recipe/multi_thread/thread/: about_thread.cpp  schedule_task.cpp
cpp/cpp_recipe/multi_thread/thread_local/: about_thread_local  about_thread_local.cpp  internal_of_thread_local.cpp
cpp/cpp_recipe/multi_thread/thread_local/about_thread_local.dSYM/Contents/: Info.plist
cpp/cpp_recipe/new/: about_new_operator_vs_operator_new.cpp  about_placement_new.cpp  about_vector_placement_new.cpp
cpp/cpp_recipe/parallel/: about_parallel.cpp
cpp/cpp_recipe/pragma_message/: about_pragma_message.cpp
cpp/cpp_recipe/rand/: about_rand.cpp
cpp/cpp_recipe/register/: about_register.cpp
cpp/cpp_recipe/signal/: about_signal.cpp
cpp/cpp_recipe/smart_ptr/: about_make_shared.cpp  about_shared_ptr  ahead_dtor.cpp  custom_deleter.cpp
cpp/cpp_recipe/smart_ptr/about_shared_ptr.dSYM/Contents/: Info.plist
cpp/cpp_recipe/static/: cpp_static.cpp  static2.cpp
cpp/cpp_recipe/storage_class_specifiers/: about_storage_class_specifiers.cpp
cpp/cpp_recipe/string/: about_str.cpp
cpp/cpp_recipe/syscall/: about_popen.cpp
cpp/cpp_recipe/template/: about_enable_if.cpp  about_explicit_template_keyword.cpp  about_meta_programming.cpp  about_sfinae.cpp  about_template.cpp
cpp/cpp_recipe/time/: about_get_time_of_day.cpp  about_time.cpp
cpp/cpp_recipe/typeinfo/: about_array.cpp  about_declval.cpp  about_typeinfo.cpp
cpp/cpp_standard/cpp17/: cpp17.cpp
cpp/dynamic_link_lib_load_order/: Makefile  lib0.c  lib1.c  lib2.c  lib3.c  lib4.c  lib5.c  main.c
cuda/cuda_context/: README.md
java/: pom.xml
java/src/main/antlr4/: Calc.g4
java/src/main/avro/: user.avsc
java/src/main/java/: Calc.java  CalcBaseListener.java  CalcParser.java
java/src/main/java/javacpp/: CpuFeatureStart.java
java/src/main/thrift/: idl.thrift
notebook/: git.md
src/main/avro/: user.avsc
src/main/java/: CalcLexer.java  CalcListener.java
src/main/java/com/hxy/avro/: README.md  User.java  UserSerialization.java
src/main/java/com/hxy/leetcode/: Solution.java
src/main/java/com/hxy/model/: Point.java
src/main/java/com/hxy/quickstart/: QuickStart.java  ShutdownHookStart.java
src/main/java/com/hxy/recipe/: RecipeApplication.java  SimpleBean.java
src/main/proto/: composite.proto  hello.proto  proto.proto
src/main/resources/: application.yml  campus.yml  input  log4j.properties  spring.xml
src/main/scala/: scala.MD  scala.md
src/main/scala/com/hxy/recipe/: QuickStart.scala  ScalaStart.scala
src/main/thrift/: demo.thrift  idl.thrift
src/test/scala/com.hxy.recipe/: ScalaTest.scala
(+495 files in other folders)
